2009-09-29  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix support for C99's float.h.

	* lib/include/bits/float.h: New. 
	* lib/Makefile.am: Update accordingly.

2009-09-29  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix build of demos that require the math library.
	
	* build-aux/sl.mk: Compile to MT alpha with `-lm' always, so that
	demo code does not need to sort out when it is needed and not.

2009-09-29  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	* doc/NEWS.txt: Document latest big changes.

2009-09-29  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Improve command-line argument handling in `slc'.

	The script supports `-ftrace-m4' but documents `-fm4-trace'. Also
	the underlying M4 implementation has changed the parameter for the
	output file from `-o' to `--debugfile'.
	
	* tools/bin/slc.in: Align documentation with
	implementation. Update to new M4 interface.

2009-09-29  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Align API for place allocation with documentation.

	Note [sl7] was authored to document the API and introduces the
	concept of SEP. Ensure this concept exists in the implementation
	as well. Also, place sharing does not exist yet.

	* lib/include/svp/sep.h,	
	* lib/src/mtsep.c: Introduce the SEP. Remove support for place
	sharing.
	
2009-09-29  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix bug in SL macro expansion.
	
	* tools/lib/t-pppalpha/slimpl.m4: Shell-quote the thread function
	name when calling Python, so as to avoid strangeness with names of
	the form "foo->bar" etc.

2009-09-28  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Extend the graphics output library.
	
	* lib/include/svp/gfx.h: Add support for pixel output at offset
	from start of framebuffer.

2009-09-27  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Small optimization in MT-alpha code generation.

	* tools/bin/spp (pppalpha.addswchll): Properly recognize `sqrt' as
	a long-latency operation.

2009-09-27  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor packaging fix.
