@@ -1,3 +1,15 @@
+2009-09-30  Raphael 'kena' Poss  <r.c.poss@uva.nl>
+
+	Introduce a default architecture configuration with many places.
+	
+	* tools/bin/slr.in: Change documentation for `-n'. Force default
+	to many places of varying sizes.
+
+	* tools/bin/slt.in: Update documentation to remove uses of `-n'.
+
+	* build-aux/slctests.mk: Do not use `-n' any more. Programs can
+	request multiple tests via SLT_RUN in the source code.
+	
 2009-09-29  Raphael 'kena' Poss  <r.c.poss@uva.nl>
 
 	Fix support for C99's float.h.
